--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,6 +4,9 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.driverClassName=org.h2.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
